# jiale-graduation

./: README.md
work_logs-main/: .gitignore
work_logs-main/.history/0任务清单/: 0任务清单_20250108044103.md  0任务清单_20250108044137.md  0任务清单_20250108044148.md  0任务清单_20250108044153.md  0任务清单_20250110213332.md  0任务清单_20250112152124.md  0任务清单_20250112162034.md  0任务清单_20250112162110.md
work_logs-main/.history/1_1定位孔洞/: 1_1_定位孔洞_20250108034046.md  1_1_定位孔洞_20250108044542.md  1_1_定位孔洞_20250108044556.md  1_1_定位孔洞_20250108044612.md  1_1_定位孔洞_20250108142724.md  1_1_定位孔洞_20250108142729.md  README_20250108143009.md  README_20250108143033.md  README_20250108143120.md  README_20250108143856.md  README_20250108143908.md
work_logs-main/.history/1_2相机测试/: 1_2相机测试_20250108045221.md  1_2相机测试_20250108145549.md  1_2相机测试_20250108145555.md  1_2相机测试_20250108145610.md
work_logs-main/.history/1_3二维码定位/: 1_3二维码定位_20250108044432.md  1_3二维码定位_20250108044503.md  1_3二维码定位_20250112022852.md  1_3二维码定位_20250112022905.md  1_3二维码定位_20250112022929.md  1_3二维码定位_20250112022948.md  1_3二维码定位_20250112023008.md  1_3二维码定位_20250112032651.md  (+6 more)
work_logs-main/0毕业设计任务清单/: 毕业设计任务清单.md  毕业设计方案确认.md
work_logs-main/1_2相机测试/: 1_2_1相机及镜头使用指南阅读笔记.md  1_2_2相机使用过程.md  1_2_3相机参数设置.md  1_2相机测试.md
work_logs-main/1_3二维码定位/: 1_3二维码定位.md
work_logs-main/1_4isaac仿真/: 1_4isaac仿真.md
work_logs-main/1_5因子图学习/: 1_5因子图学习.md
work_logs-main/2_2webots导航和轨迹/: 2_2webots导航和轨迹.md  log.txt
work_logs-main/2_4isaac仿真测试/: 1isaaclab下载.md  2isaaclab教程.md  关闭IOMMU.md
work_logs-main/2_5二维码定位接收/: 2_5二维码定位接收.md
work_logs-main/3_1AIIMU论文阅读与复现/: AI-IMU+ros2.md  AI-IMU代码复现.md  AI-IMU翻译.md  AI-IMU阅读笔记.md  IMU出对比图.md  待确认的问题.md
work_logs-main/3_2机械臂加视觉/: 机械臂+视觉方案说明.md
work_logs-main/4_1CT论文阅读与复现/: CT-UIO代码复现.md  CT-UIO翻译.md  CT-UIO阅读笔记.md
work_logs-main/5_1SfUISE代码复现/: sfuise代码复现.md  sfuise代码复现问题说明.md  sfuise相关概念说明.md  sfuise论文翻译.md  sfuise运行结果.md  sfuise阅读笔记.md
work_logs-main/5_2ros2_cpp/: ros2_cpp学习记录.md
work_logs-main/code/SFUISE/sfuise_ws/src/sfuise/: CMakeLists.txt
work_logs-main/code/SFUISE/sfuise_ws/src/sfuise/config/: config_test_isas-walk1.yaml
work_logs-main/code/SFUISE/sfuise_ws/src/sfuise/include/: Linearizer.h  Residuals.h  SplineState.h
work_logs-main/code/SFUISE/sfuise_ws/src/sfuise/include/utils/: PoseVisualization.h  common_utils.h
work_logs-main/code/SFUISE/sfuise_ws/src/sfuise/launch/: sfuise_test_isas-walk1.launch  sfuise_test_isas-walk3.launch
work_logs-main/code/SFUISE/sfuise_ws/src/sfuise/src/: EstimationInterface.cpp  SplineFusion.cpp
work_logs-main/conda/: conda常用命令.md
work_logs-main/docker/: docker常用命令.md  docker教程.md
work_logs-main/git/: 1创建新仓库.md  2同步数据.md  3用ssh替代http.md  4忽略大文件.md
work_logs-main/ros2/: 1ros2常用命令.md
(+556 files in other folders)
